Add more styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header>
-      <h1>Merlin Yang</h1>
+      <p>MY</p>
       <nav class="hidden">
         <ul class="nav-items">
           <li>Projects</li>
@@ -45,9 +45,9 @@
         <div class="profile-pic">
           <img src="/assets/profilePic.jpeg" alt="profile pic of Merlin Yang" />
         </div>
+        <h1>Mengyu Yang</h1>
         <h2>
-          <span>Full-Stack Developer</span>
-          <span>AI/ML Builder</span>
+          <span>Full-Stack AI Developer</span>
           <span>Product-Oriented</span>
         </h2>
         <p>
@@ -105,7 +105,7 @@
         </div>
       </section>
       <section class="projects-wrap">
-        <h2>Projects</h2>
+        <h2>My Projects</h2>
         <div class="project-grid"></div>
       </section>
       <section class="skills-wrap"></section>
