--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Merlin Yang Portfolio</title>
+    <title>Merlin Yang's Portfolio</title>
     <link rel="stylesheet" href="styles/styles.css" />
     <script src="scripts/main.js" type="module" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -56,7 +56,7 @@
         <div class="profile-pic">
           <img src="/assets/profilePic.jpeg" alt="profile pic of Merlin Yang" />
         </div>
-        <h1>Mengyu Yang</h1>
+        <h1>Merlin Yang</h1>
         <h2>
           <span>Full-Stack AI Developer</span>
           <span>Product-Oriented</span>
