--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="/favicon.png" type="image/png" />
     <link rel="stylesheet" href="styles/styles.css" />
     <script src="scripts/main.js" type="module" defer></script>
+    <script src="./scripts/menupop.js" defer type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,26 +27,21 @@
       </a>
       <nav class="nav-bar hidden">
         <ul class="nav-items">
-          <a href="#project-sec">
-            <li>Projects</li>
-          </a>
-          <a href="#skill-sec">
-            <li>Skills</li>
-          </a>
-          <li>About</li>
-          <li>Connect</li>
+          <li><a href="#project-sec">Projects</a></li>
+          <li><a href="#skill-sec">Skills</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="about.html#connect">Connect</a></li>
         </ul>
       </nav>
       <div class="dropdown hidden">
         <ul class="nav-items">
-          <a href="#project-sec">
-            <li>Projects</li>
-          </a>
-          <a href="#skill-sec">
-            <li>Skills</li>
-          </a>
-          <li>About</li>
-          <li>Connect</li>
+          <li><a href="#project-sec">Projects</a></li>
+
+          <li><a href="#skill-sec">Skills</a></li>
+
+          <li><a href="about.html">About</a></li>
+
+          <li><a href="about.html#connect">Connect</a></li>
         </ul>
       </div>
       <span class="material-symbols-outlined menu-icon">menu</span>
@@ -125,5 +121,8 @@
         <div class="skill-grid"></div>
       </section>
     </main>
+    <footer class="footer">
+      <p>© 2025 Merlin Yang. All rights reserved.</p>
+    </footer>
   </body>
 </html>
