convert to static site

--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
       name="description"
       content="About Merlin Yang — full-stack AI developer who builds practical tools, clean web apps, and games that feel good to play."
     />
-    <link rel="icon" href="/favicon.png" type="image/png" />
-    <link rel="stylesheet" href="styles/aboutStyles.css" />
+    <link rel="icon" href="./public/favicon.png" type="image/png" />
+    <link rel="stylesheet" href="./styles/aboutStyles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
