--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Merlin Yang's Portfolio</title>
-    <link rel="icon" href="/favicon.png" type="image/png" />
-    <link rel="stylesheet" href="styles/styles.css" />
-    <script src="scripts/main.js" type="module" defer></script>
+    <link rel="icon" href="./public/favicon.png" type="image/png" />
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <script src="./scripts/main.js" type="module" defer></script>
     <script src="./scripts/menupop.js" defer type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -51,7 +51,7 @@
     <main>
       <section id="hero-sec" class="hero-wrap">
         <div class="profile-pic">
-          <img src="/assets/profilePic.jpeg" alt="profile pic of Merlin Yang" />
+          <img src="./assets/profilePic.jpeg" alt="profile pic of Merlin Yang" />
         </div>
         <h1>Merlin Yang</h1>
         <h2>
