Add ESLint and Prettier config

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -51,7 +51,10 @@
     <main>
       <section id="hero-sec" class="hero-wrap">
         <div class="profile-pic">
-          <img src="./assets/profilePic.jpeg" alt="profile pic of Merlin Yang" />
+          <img
+            src="./assets/profilePic.jpeg"
+            alt="profile pic of Merlin Yang"
+          />
         </div>
         <h1>Merlin Yang</h1>
         <h2>
