Add description and fix w3 errors

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Merlin Yang's Portfolio</title>
+    <meta name="author" content="Merlin Yang" />
+    <meta
+      name="description"
+      content="Portfolio of Merlin Yang, a Full-Stack AI Developer building pragmatic products: AI tools, scalable web apps, and data-driven systems."
+    />
+
     <link rel="icon" href="./public/favicon.png" type="image/png" />
     <link rel="stylesheet" href="./styles/styles.css" />
-    <script src="./scripts/main.js" type="module" defer></script>
-    <script src="./scripts/menupop.js" defer type="module"></script>
+    <script src="./scripts/main.js" type="module"></script>
+    <script src="./scripts/menupop.js" type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
