--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
       rel="stylesheet"
     />
-    <script src="./scripts/menupop.js" defer type="module"></script>
-    <script src="./scripts/aboutPage.js" defer type="module"></script>
+    <script src="./scripts/menupop.js" type="module"></script>
+    <script src="./scripts/aboutPage.js" type="module"></script>
   </head>
 
   <body>
