--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Merlin Yang</title>
+    <meta name="author" content="Merlin Yang" />
     <meta
       name="description"
       content="About Merlin Yang — full-stack AI developer who builds practical tools, clean web apps, and games that feel good to play."
@@ -54,7 +55,7 @@
     <main class="about-page">
       <!-- Intro -->
       <section id="about" class="about-hero about-wrap">
-        <h1>About Melrin Yang</h1>
+        <h1>About Merlin Yang</h1>
         <p>
           Hi! I’m Merlin. I build things that are practical and actually get
           used — from AI tools and web apps to game prototypes. My approach is
