Remove original photos

--- a/gallery.html
+++ b/gallery.html
@@ -79,8 +79,7 @@
       <section class="gallery-hero">
         <h1>Photography Gallery</h1>
         <p>
-          A collection of landscape and nature photography capturing moments from Alaska to California,
-          from desert wilderness to coastal beauty.
+          Landscapes, night skies, and wildlife captured across the American West and beyond.
         </p>
       </section>
 
