--- a/index.html
+++ b/index.html
@@ -45,10 +45,6 @@
       rel="stylesheet"
     />
     <link rel="preload" href="./assets/profilePic.jpeg" as="image" type="image/jpeg" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-      rel="stylesheet"
-    />
 
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
@@ -114,10 +110,14 @@
         </ul>
       </div>
       <button class="menu-icon" aria-label="Open main menu" aria-expanded="false" aria-controls="mobile-menu">
-        <span class="material-symbols-outlined">menu</span>
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" fill="currentColor"/>
+        </svg>
       </button>
       <button class="close-icon hidden" aria-label="Close main menu" aria-expanded="true" aria-controls="mobile-menu">
-        <span class="material-symbols-outlined">close</span>
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" fill="currentColor"/>
+        </svg>
       </button>
     </header>
     <main id="main-content">
@@ -196,7 +196,9 @@
           </div>
         </div>
         <div class="scroll-for-more hidden">
-          <span class="material-symbols-outlined point-down"> south </span>
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="point-down">
+            <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z" fill="currentColor"/>
+          </svg>
           <p>projects, skills</p>
           <p>and more</p>
         </div>
